--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "tsnd --transpile-only --ignore-watch node-modules --respawn src/index.ts"
+    "dev": "tsnd --transpile-only --ignore-watch node-modules --respawn src/index.ts",
+    "typeorm": "tsnd ./node_modules/typeorm/cli"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
