--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "tsnd --transpile-only --ignore-watch node-modules --respawn src/index.ts",
+    "dev": "tsnd --transpile-only --ignore-watch node-modules --respawn src/server.ts",
     "typeorm": "tsnd ./node_modules/typeorm/cli"
   },
   "devDependencies": {
@@ -24,6 +24,7 @@
     "bcrypt": "^5.1.0",
     "csv-parse": "^5.3.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
