--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "tsnd --transpile-only --ignore-watch node-modules --respawn src/server.ts",
+    "dev": "tsnd --transpile-only --ignore-watch node-modules --respawn src/shared/infra/http/server.ts",
     "typeorm": "tsnd ./node_modules/typeorm/cli",
     "test": "jest"
   },
