--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsnd --transpile-only --ignore-watch node-modules --respawn src/shared/infra/http/server.ts",
     "typeorm": "tsnd ./node_modules/typeorm/cli",
-    "test": "jest",
+    "test": "NODE_ENV=test jest",
     "seed:admin": "tsnd src/shared/infra/typeorm/seed/admin.ts"
   },
   "devDependencies": {
@@ -15,6 +15,7 @@
     "@types/jest": "^29.2.5",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/multer": "^1.4.7",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
@@ -29,12 +30,14 @@
     "bcrypt": "^5.1.0",
     "csv-parse": "^5.3.3",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.3.3",
     "swagger-ui-express": "^4.6.0",
     "tsyringe": "^4.7.0",
     "typeorm": "0.2.45",
